--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -93,44 +93,48 @@
     </LinearLayout>
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
         <LinearLayout
+            android:layout_marginBottom="20dp"
             android:layout_width="match_parent"
             android:gravity="center"
             android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/timer"
-                android:layout_marginEnd="50dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="20dp"
                 android:layout_gravity="center"
+
                 android:src="@drawable/ic_access_time_black_24dp" />
 
             <ImageView
                 android:id="@+id/eqbutton"
-                android:layout_marginEnd="50dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_equalizer_black_24dp" />
             <ImageView
                 android:id="@+id/share"
-                android:layout_marginEnd="50dp"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_share_black_24dp" />
 
 
             <ImageView
                 android:id="@+id/addtoplaylists"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="20dp"
                 android:layout_gravity="center"
                 android:src="@drawable/ic_playlist_add_black_24dp" />
 
