--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -32,17 +32,13 @@
                 android:layout_marginTop="35dp">
 
                 <ImageView
+                    android:id="@+id/backarrow"
                     android:layout_width="10dp"
                     android:layout_height="15.5dp"
                     android:layout_marginLeft="17.7dp"
                     android:src="@drawable/backarrow" />
 
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="19dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginRight="17.5dp"
-                    android:src="@drawable/playlist" />
+
 
             </RelativeLayout>
 
@@ -69,26 +65,32 @@
 
         </FrameLayout>
 
+        <LinearLayout
+            android:layout_width="300dp"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:layout_height="wrap_content">
 
-        <customfonts.MyTextView_Poppins_Medium
-            android:id="@+id/txttitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="40dp"
-            android:layout_marginBottom="-3dp"
-            android:text="Startboy"
-            android:textColor="#4f4f4f"
-            android:textSize="23.3sp" />
+            <customfonts.MyTextView_Poppins_Medium
+                android:id="@+id/txttitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"
+                android:layout_marginBottom="-3dp"
+                android:text="Startboy"
+                android:textColor="#4f4f4f"
+                android:textSize="23.3sp" />
 
-        <customfonts.MyTextView_Poppins_Medium
-            android:id="@+id/txtartist"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="The Weekend"
-            android:textColor="#c9c9c9"
-            android:textSize="11.7sp" />
+            <customfonts.MyTextView_Poppins_Medium
+                android:id="@+id/txtartist"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="The Weekend"
+                android:textColor="#c9c9c9"
+                android:textSize="11.7sp" />
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -129,14 +131,16 @@
                 android:layout_gravity="center"
                 android:src="@drawable/ic_share_black_24dp" />
 
-
             <ImageView
-                android:id="@+id/addtoplaylists"
+                android:id="@+id/playlists"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="20dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_playlist_add_black_24dp" />
+                android:src="@drawable/ic_playlist_play_black_24dp" />
+
+
+
 
 
         </LinearLayout>
@@ -162,7 +166,6 @@
             android:layout_marginLeft="35dp"
             android:layout_marginRight="40dp"
             android:layout_marginTop="3dp"
-            android:layout_marginBottom="50.3dp"
             android:orientation="horizontal">
 
             <customfonts.MyTextView_Poppins_Regular
@@ -201,11 +204,12 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/randombutton"
-                    android:layout_width="13dp"
-                    android:layout_height="match_parent"
+                    android:id="@+id/addtoplaylists"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_marginEnd="20dp"
                     android:layout_gravity="center"
-                    android:src="@drawable/shuffle" />
+                    android:src="@drawable/ic_playlist_add_black_24dp" />
 
 
             </LinearLayout>
