--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -69,7 +69,7 @@
             android:layout_width="300dp"
             android:layout_gravity="center"
             android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:layout_height="150dp">
 
             <customfonts.MyTextView_Poppins_Medium
                 android:id="@+id/txttitle"
