--- a/app/src/main/res/layout/discover_toolbar.xml
+++ b/app/src/main/res/layout/discover_toolbar.xml
@@ -2,6 +2,7 @@
 <androidx.appcompat.widget.Toolbar
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/toolbar"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:elevation="4dp">
@@ -16,17 +17,12 @@
 
 
 
-  <ImageView
-      android:layout_width="17.5dp"
-      android:layout_height="13.5dp"
-      android:layout_centerVertical="true"
-      android:src="@drawable/menu"/>
+
 
     <customfonts.MyTextView_Poppins_Medium
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18.3sp"
-        android:layout_centerHorizontal="true"
         android:textColor="#4f4f4f"
         android:text="Discover"
         />
@@ -42,5 +38,7 @@
 
 
 </RelativeLayout>
+
+
 
 </androidx.appcompat.widget.Toolbar>
