--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,18 @@
 
     <dimen name="pager_margin">5dp</dimen>
     <dimen name="viewPagerMargin">150dp</dimen>
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
+        <dimen name="spacing_medium">5dp</dimen>
+        <dimen name="spacing_middle">10dp</dimen>
+        <dimen name="spacing_large">15dp</dimen>
+        <dimen name="spacing_smlarge">18dp</dimen>
+        <dimen name="spacing_mlarge">10dp</dimen>
+        <dimen name="spacing_xlarge">35dp</dimen>
+        <dimen name="spacing_xxlarge">50dp</dimen>
+        <dimen name="lb_details_v2_card_height">430dp</dimen>
+
+
 </resources>
